--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,15 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- this asks the question to each html page extending this _base.html -->
     <!-- when page gives it the answer, it shows that inside of it -->
     <title>{% block title %}{% endblock title %}</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+      integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css"
+    />
+    <link rel="stylesheet" href="{{ get_url(path='styles.css') | safe }}" />
   </head>
 
   <body>
-    <section class="section">
-      <!-- this loads the content -->
-      <div class="container">{% block content %} {% endblock %}</div>
-    </section>
+    <div class="pure-g">
+      <div class="pure-u-1 pure-u-md-1-4">
+        <section class="sidebar" id="sidebar">
+          {% include "_sidebar.html" %}
+        </section>
+      </div>
+      <div class="pure-u-1 pure-u-md-3-4">
+        <section class="content">{% block content %} {% endblock %}</section>
+      </div>
+      {#
+      <div class="pure-u-1 pure-u-md-1-8">
+        <section class="toc" id="toc">{% include "_toc.html" %}</section>
+      </div>
+      #}
+    </div>
   </body>
 </html>
