--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,9 +20,14 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <div class="title-logo">Your Logo Here</div>
+      <button id="navbar-toggle" class="navbar-toggle">☰</button>
+    </div>
     <div class="pure-g">
       <div class="pure-u-1 pure-u-md-1-4">
         <section class="sidebar" id="sidebar">
+          <div class="title-logo">Your Logo Here</div>
           {% include "_sidebar.html" %}
         </section>
       </div>
