--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,22 +6,17 @@ body {
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: $fg;
   font-size: 1.2em;
-  padding: 1%;
+}
+
+.blog {
+  max-width: 1100px;
+  margin: 0 auto;
+  background-color: lightcoral;
 }
 
 .content {
   background-color: lightblue;
-  padding: 0.5em; // Add padding to the sidebar to ensure inner elements are properly aligned
-}
-
-.sidebar {
-  background-color: lightpink;
-  padding: 0.5em; // Add padding to the sidebar to ensure inner elements are properly aligned
-}
-
-.l-box {
-  padding: 1em;
-  background-color: lightcoral;
+  padding: 0.5em;
 }
 
 pre {
@@ -30,67 +25,11 @@ pre {
   font-size: 0.9rem;
 }
 
-.title-logo {
-  background-color: yellow;
-  font-size: 2em;
-  font-weight: bold;
-  text-decoration: none;
-  margin: 0; // Remove any default margins that might affect alignment
-  padding: 1em 0; // Add padding for proper alignment and spacing
-  display: block; // Ensure it behaves like a block-level element
-}
-
 a {
-  // color: #f5c211;
   text-decoration: none;
   overflow-wrap: break-word;
 }
 
 strong {
   overflow-wrap: break-word;
-}
-
-.pure-g {
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-.navbar {
-  display: none; // Hide navbar by default
-  justify-content: space-between;
-  align-items: center;
-  background-color: yellow;
-  padding: 0.5em;
-}
-
-.navbar-toggle {
-  font-size: 2em;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    display: flex; // Show navbar on small screens
-  }
-  .sidebar {
-    display: none; // Hide sidebar by default on small screens
-  }
-  .sidebar.show {
-    display: block; // Show sidebar when toggle is active
-    background-color: yellow;
-  }
-  .sidebar .title-logo {
-    display: none; // Hide logo in sidebar on small screens
-  }
-}
-
-@media (min-width: 768px) {
-  .navbar {
-    display: none; // Hide navbar on larger screens
-  }
-  .sidebar .title-logo {
-    display: block; // Show logo in sidebar on larger screens
-  }
 }
