--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,7 +26,7 @@
       >
       <button id="navbar-toggle" class="navbar-toggle">☰</button>
     </div>
-    <div class="pure-g">
+    <div class="pure-g blog">
       <div class="pure-u-1 pure-u-md-1-4">
         <section class="sidebar" id="sidebar">
           <a href="{{ get_url(path='/') | safe }}"
