chore: add theme.scss and standardize colors

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,21 +1,20 @@
-$fg: #121212;
-$bg: #fff;
+@use "theme";
 
 body {
-  background-color: $bg;
+  background-color: var(--bg-color);
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: $fg;
+  color: var(--text-color);
   font-size: 1.2em;
 }
 
 .blog {
   max-width: 1100px;
   margin: 0 auto;
-  background-color: lightcoral;
+  background-color: lightgreen;
 }
 
 .content {
-  background-color: lightblue;
+  background-color: var(--content-bg-color);
   padding: 0.5em;
 }
 
@@ -26,6 +25,7 @@ pre {
 }
 
 a {
+  color: var(--link-color);
   text-decoration: none;
   overflow-wrap: break-word;
 }
