feat: add scratch dark mode button

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -20,6 +20,13 @@
   cursor: pointer;
 }
 
+.theme-toggle {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .title-logo {
   background-color: var(--accent);
   font-size: 2em;
