--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,5 +1,5 @@
-<footer class="footer-container">
-  <hr />
+<hr />
+<footer class="footer">
   <div class="pure-g">
     <div class="pure-u-1 pure-u-md-5-8 footer-links">
       <a href="##">About Me</a>
