--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -12,9 +12,9 @@
   </button>
 
   <ul>
-    <li><a href="/link1">Link 1</a></li>
-    <li><a href="/link2">Link 2</a></li>
-    <li><a href="/link3">Link 3</a></li>
+    <li><a href="##">About Me</a></li>
+    <li><a href="##">Mail</a></li>
+    <li><a href="{{ get_url(path='page-1') | safe }}">Page 1</a></li>
   </ul>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit at
