style: table and hr

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -52,3 +52,40 @@ strong {
     margin-left: 0em; // Add margin to create space from the sidebar
   }
 }
+
+hr {
+  border: 0;
+  background: var(--text-color);
+  height: 0.1em;
+  margin: 0 0 1em;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 1em;
+  color: var(--text-color);
+  border-spacing: 0;
+  font-size: 1em;
+  border-radius: 0.1em;
+  overflow: hidden;
+}
+
+th,
+td {
+  padding: 0.5em;
+  border-bottom: 1px solid var(--table-border);
+}
+
+th {
+  background-color: var(--table-header-bg);
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: var(--table-row-bg);
+}
+
+tr:hover {
+  background-color: var(--table-hover-bg);
+}
