--- a/templates/page.html
+++ b/templates/page.html
@@ -13,9 +13,17 @@
 </div>
 #}
 
-<h1 class="title">{{page.title}}</h1>
+<h1 class="title">{{ page.title }}</h1>
 
-<p class="subtitle"><strong>{{ page.date }}</strong></p>
+{#
+<p class="date">{{ page.updated | date(format="%a %d %B, %Y") }}</p>
+#}
+<p class="date">{{ page.updated }}</p>
 
 <!-- this loads the actual md content besides the front matter -->
-{{ page.content | safe }} {% include "_footer.html" %} {% endblock content %}
+{{ page.content | safe }} {% if page.date != page.updated %}
+<p class="date">
+  Originally posted on:
+  <strong>{{ page.date }}</strong>
+</p>
+{% endif %} {% include "_footer.html" %} {% endblock content %}
