--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -11,6 +11,8 @@
   --table-row-bg: #f9f9f9;
   --table-hover-bg: #f1f1f1;
   --table-border: #ddd;
+
+  --permalink: #adadad;
 }
 
 [data-theme="dark"] {
@@ -25,4 +27,6 @@
   --table-row-bg: #111;
   --table-hover-bg: #222;
   --table-border: #444;
+
+  --permalink: #59595b;
 }
