--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -45,7 +45,7 @@
 .title-logo {
   background-color: var(--accent);
   font-size: 1.7em;
-  color: black;
+  color: var(--bg-color);
   font-weight: bold;
   text-decoration: none;
   padding: 0.5em;
