--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -18,6 +18,8 @@
   --blockquote-text: #444;
 
   --link-visited: #7c00c8;
+
+  --expand: #121212;
 }
 
 [data-theme="dark"] {
@@ -39,4 +41,6 @@
   --blockquote-text: #999;
 
   --link-visited: #c263ff;
+
+  --expand: #999;
 }
