feat: add callout shortcode

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -19,6 +19,15 @@
 
   --link-visited: #7c00c8;
 
+  --callout-info: #00b8d4;
+  --callout-info-bg: #e5f8fb;
+  --callout-warning: #ff9100;
+  --callout-warning-bg: #fff4e5;
+  --callout-tip: #00bfa5;
+  --callout-tip-bg: #e5f8f6;
+  --callout-danger: #ff1744;
+  --callout-danger-bg: #ffe7ec;
+
   --expand: #121212;
 }
 
@@ -41,6 +50,15 @@
   --blockquote-text: #999;
 
   --link-visited: #c263ff;
+
+  --callout-info: #00b8d4;
+  --callout-info-bg: #00363e;
+  --callout-warning: #ff9100;
+  --callout-warning-bg: #432600;
+  --callout-tip: #00bfa5;
+  --callout-tip-bg: #00332c;
+  --callout-danger: #ff1744;
+  --callout-danger-bg: #540615;
 
   --expand: #999;
 }
