--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -1,29 +1,29 @@
-table {
+.table-shortcode {
   width: 100%;
   border-collapse: collapse;
-  font-size: 1em;
   color: var(--text-color);
   border-spacing: 0;
-  font-size: 1em;
   border-radius: 0.1em;
   overflow: hidden;
+  margin: 1em 0;
 }
 
-table > th,
-table > td {
-  padding: 0.5em;
-  border-bottom: 1px solid var(--table-border);
+.table-shortcode td,
+.table-shortcode th {
+  padding: 0.3em;
+  border: 1px solid var(--table-border);
 }
 
-table th {
-  background-color: var(--table-header-bg);
-  font-weight: bold;
-}
-
-table tr:nth-child(even) {
+.table-shortcode tr:nth-child(even) {
   background-color: var(--table-row-bg);
 }
 
-table tr:hover {
+.table-shortcode tr:hover {
   background-color: var(--table-hover-bg);
+}
+
+.table-shortcode th {
+  background-color: var(--table-header-bg);
+  text-align: left;
+  font-weight: bold;
 }
