--- a/templates/_base.html
+++ b/templates/_base.html
@@ -61,7 +61,9 @@
     <div class="pure-g blog">
       <div class="pure-u-1 pure-u-md-1-4">
         <section class="sidebar" id="sidebar">
-          <a href="{{ get_url(path='/') | safe }}"
+          <a
+            href="{{ get_url(path='/') | safe }}"
+            title="Go to home (or press 'h')"
             ><div class="title-logo">Your Logo Here</div></a
           >
           {% include "_sidebar.html" %}
