--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -35,6 +35,8 @@
 
   --codeblock-lineno: #aaa;
   --codeblock-lineno-highlight: #fff;
+
+  --post-date: #555;
 }
 
 [data-theme="dark"] {
@@ -74,4 +76,6 @@
 
   --codeblock-lineno: #aaa;
   --codeblock-lineno-highlight: #fff;
+
+  --post-date: #999;
 }
