--- a/templates/page.html
+++ b/templates/page.html
@@ -11,19 +11,20 @@
   <!-- <a href="{{ get_url(path='@/_index.md') }}">Home</a>&nbsp;»&nbsp; -->
   <a href="{{ page.permalink }}">{{ page.title }}</a>
 </div>
+#} {#
+<h1 class="title"><span class="title-background">{{ page.title }}</span></h1>
 #}
+<h1 class="title"><span class="title-background">{{ page.title }}</span></h1>
 
-<h1 class="title">{{ page.title }}</h1>
-
-{#
-<p class="date">{{ page.updated | date(format="%a %d %B, %Y") }}</p>
-#}
-<p class="date">{{ page.updated }}</p>
-
-<!-- this loads the actual md content besides the front matter -->
-{{ page.content | safe }} {% if page.date != page.updated %}
-<p class="date">
-  Originally posted on:
-  <strong>{{ page.date }}</strong>
+{# if updated date present, then display that. if not, show original date #} {%
+if page.updated %}
+<p class="post-date">
+  Updated: {{ page.updated | date(format="%a %d %B, %Y") }}
 </p>
-{% endif %} {% include "_footer.html" %} {% endblock content %}
+{% else %}
+<p class="post-date">{{ page.date | date(format="%a %d %B, %Y") }}</p>
+{% endif %} {{ page.content | safe }} {% if page.updated %}
+<p class="post-date">
+  Originally posted on: {{ page.date | date(format="%a %d %B, %Y") }}
+</p>
+{% endif %}{% include "_footer.html" %} {% endblock content %}
