--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -37,6 +37,9 @@
   --codeblock-lineno-highlight: #fff;
 
   --post-date: #555;
+
+  --back-to-top-bg: #ddd;
+  --back-to-top-fg: #222;
 }
 
 [data-theme="dark"] {
@@ -78,4 +81,7 @@
   --codeblock-lineno-highlight: #fff;
 
   --post-date: #999;
+
+  --back-to-top-bg: #333;
+  --back-to-top-fg: #aaa;
 }
