--- a/templates/page.html
+++ b/templates/page.html
@@ -16,6 +16,14 @@
 #}
 <h1 class="title"><span class="title-background">{{ page.title }}</span></h1>
 
+<button id="backToTop">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="backToTop">
+    <path
+      d="M18.78 15.78a.749.749 0 0 1-1.06 0L12 10.061 6.28 15.78a.749.749 0 1 1-1.06-1.06l6.25-6.25a.749.749 0 0 1 1.06 0l6.25 6.25a.749.749 0 0 1 0 1.06Z"
+    ></path>
+  </svg>
+</button>
+
 {# if updated date present, then display that. if not, show original date #} {%
 if page.updated %}
 <p class="post-date">
