style: improve img shortcode styling

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -40,6 +40,8 @@
 
   --back-to-top-bg: #ddd;
   --back-to-top-fg: #222;
+
+  --img-caption: #222;
 }
 
 [data-theme="dark"] {
@@ -84,4 +86,6 @@
 
   --back-to-top-bg: #333;
   --back-to-top-fg: #aaa;
+
+  --img-caption: #888;
 }
