--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -84,6 +84,8 @@ hr {
 figcaption {
   text-align: center;
   padding: 0.5em;
+  font-size: 0.8em;
+  color: var(--img-caption);
 }
 
 .header-with-permalink {
@@ -174,4 +176,13 @@ details > summary span {
 
 .backToTop path {
   fill: var(--back-to-top-fg);
+}
+
+.pure-img {
+  margin: 0 auto;
+}
+
+.img-border {
+  border: 3px dotted var(--accent);
+  border-radius: 0.4em;
 }
