--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,15 @@
-{% extends "_base.html" %}
-
-{% block title %}{{config.extra.index_title}}{% endblock title %}
-
-{% block content %}
+{% extends "_base.html" %} {% block title %}{{config.extra.index_title}}{%
+endblock title %} {% block content %}
 
 <h1 class="title">{{config.extra.index_title}}</h1>
 
-{{ section.content | safe }}
+{# {{ section.content | safe }} #}
 
-<ul>
-
-{% for page in section.pages %}
+<ul class="index-post-list">
+  {% for page in section.pages %}
 
   <li><a href="{{ page.permalink | safe }}">{{ page.title }}</a></li>
   {% endfor %}
-
 </ul>
 
 {% endblock content %}
