--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -12,15 +12,71 @@
     {{ moon_icon | safe }}
   </button>
 
-  <ul>
-    <li><a href="##">About Me</a></li>
-    <li><a href="##">Mail</a></li>
-    <li><a href="{{ get_url(path='page-1') | safe }}">Page 1</a></li>
-  </ul>
+  <div class="links-sidebar">
+    <ul>
+      <li><a href="mailto:dpi0.dev@proton.me">mail</a></li>
+      <li><a href="{{get_url(path='/projects/') | safe}}">projects</a></li>
+    </ul>
+  </div>
 
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit at
-    tempore, minus quisquam nemo blanditiis vitae repudiandae quis et porro ad
-    corporis quo minima harum laboriosam provident culpa! Molestias, totam.
-  </p>
+  <div class="about-me-sidebar">
+    <span>about me</span>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit at
+      tempore, minus quisquam nemo blanditiis vitae repudiandae quis et porro ad
+      corporis quo minima harum laboriosam provident culpa! Molestias, totam.
+    </p>
+  </div>
+
+  <div class="social-links-sidebar">
+    <a href="https://github.com/dpi0">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        class="social-links-sidebar-icon"
+      >
+        <title>GitHub</title>
+        <path
+          d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
+        ></path>
+      </svg>
+    </a>
+    <a href="mailto:dpi0.dev@proton.me">
+      <svg
+        role="img"
+        viewBox="0 0 24 24"
+        class="social-links-sidebar-icon"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <title>Proton Mail</title>
+        <path
+          d="m15.24 8.998 3.656-3.073v15.81H2.482C1.11 21.735 0 20.609 0 19.223V6.944l7.58 6.38a2.186 2.186 0 0 0 2.871-.042l4.792-4.284h-.003zm-5.456 3.538 1.809-1.616a2.438 2.438 0 0 1-1.178-.533L.905 2.395A.552.552 0 0 0 0 2.826v2.811l8.226 6.923a1.186 1.186 0 0 0 1.558-.024zM23.871 2.463a.551.551 0 0 0-.776-.068l-3.199 2.688v16.653h1.623c1.371 0 2.481-1.127 2.481-2.513V2.824a.551.551 0 0 0-.129-.36z"
+        />
+      </svg>
+    </a>
+
+    <a href="https://youtube.com/@dpi0-yt">
+      <svg
+        role="img"
+        viewBox="0 0 24 24"
+        class="social-links-sidebar-icon"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <title>YouTube</title>
+        <path
+          d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"
+        />
+      </svg>
+    </a>
+
+    <a href="https://discord.gg/2gkXvMvPju">
+      <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <title>Discord</title>
+        <path
+          d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"
+        />
+      </svg>
+    </a>
+  </div>
 </div>
