--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -27,14 +27,20 @@
 
 .title-logo {
   background-color: var(--accent);
-  font-size: 1.9em;
+  font-size: 2.2em;
   color: var(--bg-color);
   font-weight: bold;
   text-decoration: none;
   padding: 0.5em;
-  // padding-right: 0.3em;
+  // padding-right: 0.8em;
+  // padding-left: 0.2em;
   border-radius: 0.5rem;
+  padding-left: 1em;
   display: block;
+}
+
+.title-dots {
+  color: var(--title-dots);
 }
 
 .sidebar-content {
