--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <a href="{{ get_url(path='/') | safe }}"
-    ><div class="title-logo">{{config.extra.logo}}</div></a
+    ><div class="title-logo">Clearly Not A.I.</div></a
   >
   {% set moon_icon = load_data(path="icon/moon.svg") %} {% set sun_icon =
   load_data(path="icon/sun.svg") %}
