--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -42,6 +42,10 @@
   --back-to-top-fg: #222;
 
   --img-caption: #222;
+
+  --title-dots: #ffff00;
+  --title-background: #0065d9;
+  --date-background: #444655;
 }
 
 [data-theme="dark"] {
@@ -88,4 +92,8 @@
   --back-to-top-fg: #aaa;
 
   --img-caption: #888;
+
+  --title-dots: #0026ff;
+  --title-background: #00ff00;
+  --date-background: #a0a0a0;
 }
