--- a/templates/_base.html
+++ b/templates/_base.html
@@ -64,8 +64,9 @@
           <a
             href="{{ get_url(path='/') | safe }}"
             title="Go to home (or press 'h')"
-            ><div class="title-logo">{{config.extra.logo}}</div></a
-          >
+            >
+            <div class="title-logo">Clearly<br>Not<br>A<span class="title-dots">.</span>I<span class="title-dots">.</span></div>
+
           {% include "_sidebar.html" %}
         </section>
       </div>
