--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "_base.html" %} {% block title %}{{config.extra.index_title}}{%
 endblock title %} {% block content %}
 
-<h1 class="title">{{config.extra.index_title}}</h1>
+<h1 class="title">
+  <span class="title-background">{{config.extra.index_title}}</span>
+</h1>
 
 {# {{ section.content | safe }} #}
 
